--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Lianna Newman Codes
 email: liannanewman@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Anyone Can Learn To Code Blog.
+  Actualize Blog.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://liannanewman.github.io/" # the base hostname & protocol for your site
 #twitter_username:
